2014-11-01  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* sysdeps/unix/sysv/linux/sparc/sys/ucontext.h (struct fpu): fix
	the size of the fpu_fr.fpu_dregs[] array.

2014-11-01  Joseph Myers  <joseph@codesourcery.com>

	* posix/nanosleep.c (__libc_nanosleep): Rename to __nanosleep.
	(__nanosleep): Do not define as alias.
	(nanosleep): Define as alias of __nanosleep.
	* sysdeps/unix/sysv/linux/syscalls.list (nanosleep): Remove
	__libc_nanosleep name.

2014-10-31  Joseph Myers  <joseph@codesourcery.com>

	* aclocal.m4 (GLIBC_AUTOCONF_VERSION): Mention need to update
	install.texi in comment.

2014-10-31  Torvald Riegel  <triegel@redhat.com>

	* sysdeps/powerpc/bits/atomic.h (atomic_write_barrier): Remove and...
	* sysdeps/powerpc/powerpc32/bits/atomic.h (atomic_write_barrier):
	... add here and use lwsync or sync ...
	* sysdeps/powerpc/powerpc64/bits/atomic.h (atomic_write_barrier):
	... and add here using lwsync.

2014-10-31  Matthew Fortune  <matthew.fortune@imgtec.com>

	* elf/dl-machine-reject-phdr.h: New file.
	* elf/dl-load.c: #include that.
	(open_verify): Call elf_machine_reject_phdr_p and ignore the file
	if that returned true.

2014-10-31  Roland McGrath  <roland@hack.frob.com>

	[BZ #17496]
	* Makerules: Move gnu/lib-names.h generation chunk up, to right after
	gen-as-const-headers chunk.  Add a big scare comment after the last
	safe place to touch before-compile.

2014-10-31  Joseph Myers  <joseph@codesourcery.com>

	* manual/install.texi (Tools for Compilation): Update autoconf
	version requirements.
	* INSTALL: Regenerated.

	* misc/pselect.c [!__pselect] (__libc_pselect): Remove alias.
	* sysdeps/unix/sysv/linux/pselect.c [__NR_pselect6]
	(__libc_pselect): Likewise.

	[BZ #14138]
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pread.c: Remove file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pread64.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pwrite.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pwrite64.c: Likewise.
