@@ -10,7 +10,7 @@ Version 2.21
 * The following bugs are resolved with this release:
 
   6652, 12926, 14138, 14171, 15215, 15884, 17266, 17344, 17363, 17370,
-  17371, 17411, 17460, 17485, 17501, 17508.
+  17371, 17411, 17460, 17485, 17501, 17508, 17522.
 
 Version 2.20
 
